// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bookmarks integration test should flow: bookmarks opened 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "hosts",
        },
        "type": "BOOKMARKS_REQUEST",
      },
    ],
  ],
  "state": Object {
    "bookmarks": Object {
      "currentQuery": "",
      "hosts": Object {
        "errors": null,
        "results": Array [],
        "status": "PENDING",
      },
      "showModal": false,
    },
  },
}
`;

exports[`Bookmarks integration test should flow: bookmarks opened and loaded 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "controller": "hosts",
          "results": Array [
            Object {
              "controller": "hosts",
              "id": 52,
              "name": "1111",
              "owner_id": 1,
              "owner_type": "User",
              "public": true,
              "query": "abc",
            },
            Object {
              "controller": "hosts",
              "id": 54,
              "name": "1122",
              "owner_id": 1,
              "owner_type": "User",
              "public": true,
              "query": "abc",
            },
          ],
        },
        "type": "BOOKMARKS_SUCCESS",
      },
    ],
  ],
  "state": Object {
    "bookmarks": Object {
      "currentQuery": "",
      "hosts": Object {
        "errors": null,
        "results": Array [
          Object {
            "controller": "hosts",
            "id": 52,
            "name": "1111",
            "owner_id": 1,
            "owner_type": "User",
            "public": true,
            "query": "abc",
          },
          Object {
            "controller": "hosts",
            "id": 54,
            "name": "1122",
            "owner_id": 1,
            "owner_type": "User",
            "public": true,
            "query": "abc",
          },
        ],
        "status": "RESOLVED",
      },
      "showModal": false,
    },
  },
}
`;

exports[`Bookmarks integration test should flow: form submitted 1`] = `
Object {
  "bookmarks": Object {
    "currentQuery": "",
    "hosts": Object {
      "errors": null,
      "results": Array [
        Object {
          "controller": "hosts",
          "id": 52,
          "name": "1111",
          "owner_id": 1,
          "owner_type": "User",
          "public": true,
          "query": "abc",
        },
        Object {
          "controller": "hosts",
          "id": 54,
          "name": "1122",
          "owner_id": 1,
          "owner_type": "User",
          "public": true,
          "query": "abc",
        },
        Object {
          "controller": "hosts",
          "name": "Joe.D",
          "public": false,
          "query": "name ~ my",
        },
      ],
      "status": "RESOLVED",
    },
    "showModal": false,
  },
}
`;

exports[`Bookmarks integration test should flow: initial state 1`] = `
Object {
  "bookmarks": Object {
    "currentQuery": "",
    "showModal": false,
  },
}
`;

exports[`Bookmarks integration test should flow: modal opened 1`] = `
Object {
  "action": Array [
    Array [
      Object {
        "payload": Object {
          "query": "",
        },
        "type": "BOOKMARKS_MODAL_OPENED",
      },
    ],
  ],
  "state": Object {
    "bookmarks": Object {
      "currentQuery": "",
      "hosts": Object {
        "errors": null,
        "results": Array [
          Object {
            "controller": "hosts",
            "id": 52,
            "name": "1111",
            "owner_id": 1,
            "owner_type": "User",
            "public": true,
            "query": "abc",
          },
          Object {
            "controller": "hosts",
            "id": 54,
            "name": "1122",
            "owner_id": 1,
            "owner_type": "User",
            "public": true,
            "query": "abc",
          },
        ],
        "status": "RESOLVED",
      },
      "showModal": true,
    },
  },
}
`;
